# opcode-plus

./: ATTRIBUTION.md  CHANGELOG.md  README.md  README.zh-CN.md  RELEASE_NOTES_v1.0.0-plus.4.md  bun.lockb  index.html  justfile  package-lock.json  package.json
.async/memory/: MEMORY.md
.async/memory/project/: opcode-plus.md
.github/workflows/: build-macos.yml  build-test.yml  build-windows.yml  build.yml  release.yml
cc_agents/: README.md
docs/: cli-flow.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: claude_binary.rs  main.rs  web_main.rs  web_server.rs
src-tauri/src/commands/: agents.rs  claude.rs  mcp.rs  slash_commands.rs
src-tauri/src/process/: registry.rs
src/assets/: shimmer.css
src/components/: AgentExecution.tsx  Agents.tsx  AnalyticsConsent.tsx  CCAgents.tsx  CheckpointSettings.tsx  ClaudeCodeSession.refactored.tsx  ClaudeCodeSession.tsx  CreateAgent.tsx  CustomTitlebar.tsx  DogAnimation.tsx  ExecutionControlBar.tsx  FloatingPromptInput.tsx  HighlightedText.tsx  HooksEditor.tsx  LanguageSelector.tsx  MCPAddServer.tsx  MCPImportExport.tsx  MCPManager.tsx  MCPServerList.tsx  NFOCredits.tsx  ProjectList.tsx  ProjectSettings.tsx  ProxySettings.tsx  SessionList.tsx  Settings.tsx  SlashCommandPicker.tsx  SlashCommandsManager.tsx  StartupIntro.tsx  StorageTab.tsx  StreamMessage.tsx  TabContent.tsx  ThinkingIndicator.tsx  TimelineNavigator.tsx  ToolWidgets.tsx  Topbar.tsx  UsageDashboard.tsx  WebviewPreview.tsx
src/components/claude-code-session/: PromptQueue.tsx
src/components/ui/: select.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useIMESafeEnterSubmit.ts
src/i18n/: index.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  vi.json  zh-TW.json  zh.json
src/lib/: api.ts  apiAdapter.ts  claudeSyntaxTheme.ts
src/lib/analytics/: index.ts
src/stores/: README.md
src/utils/: ime.ts
