[package]
name = "opcode_plus"
version = "1.0.0-plus.1"
description = "GUI app and Toolkit for Claude Code (Plus)"
authors = ["mufeedvh", "123vviekr"]
license = "AGPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "opcode_plus"
path = "src/main.rs"

[lib]
name = "opcode_plus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# NOTE: The optional web server binary (src/web_main.rs) is intentionally NOT
# declared as a [[bin]] here. Tauri's bundler scans every [[bin]] entry in
# Cargo.toml when packaging (.deb / .dmg / .msi / .nsis) and will fail if the
# compiled artifact is missing. Cargo `required-features` does NOT hide the
# entry from the bundler. Keeping opcode_plus_web out of the manifest is the
# only reliable way to make Linux/Windows/macOS bundles succeed.
#
# To run the web server during development, temporarily add back the block:
#   [[bin]]
#   name = "opcode_plus_web"
#   path = "src/web_main.rs"
# then run `cargo run --bin opcode_plus_web`. Do NOT commit this change.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
glob = "0.3"
base64 = "0.22"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3"
which = "7"
sha2 = "0.10"
zstd = "0.13"
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2"
serde_yaml = "0.9"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
# Pin image to avoid edition2024 requirement
image = "=0.25.1"


[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
window-vibrancy = "0.5"
cocoa = "0.26"
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
